tests/error/type_match/base_case_array_mismatched_size.bz
// error: unable to match type '[5: i32]' to '[4: i32]'
// note: mismatched array sizes: 5 and 4
function test()
{
	let _: [4: i32] = [5: i32]();
}
